# pdo-contracts

./: .gitmodules  CMakeLists.txt  VERSION  testplan.md
.github/workflows/: ci.yaml
docker/: Makefile
example-contract/: CMakeLists.txt  MANIFEST  README.md  example_common.cmake  setup.py
example-contract/docs/notebooks/factories/: counter.py  counter_import.py
example-contract/docs/notebooks/templates/: counter.py
example-contract/etc/: example.toml
example-contract/example/contracts/: counter.cpp
example-contract/pdo/example/jupyter/: __init__.py  context.py  counter.py
example-contract/pdo/example/plugins/: counter.py
example-contract/test/: functional_test.psh  run_tests.sh  script_test.sh
exchange-contract/docs/notebooks/factories/: token_import.py
exchange-contract/docs/notebooks/templates/: exchange_create.py  issuer.py  token-issuer.py  token.py  wallet.py
exchange-contract/pdo/contracts/: common.py  common_widgets.py  jupyter.py  keys.py
exchange-contract/pdo/exchange/: jupyter.py
identity-contract/: CMakeLists.txt  MANIFEST  MANIFEST.in  family.cmake  setup.py
identity-contract/context/: committee.toml  identity.toml  policy_agent.toml  signature_authority.toml
identity-contract/docs/examples/: softball_roster.md  vc_scai_attributes.json  vc_softball_coach.json  vc_softball_player.json
identity-contract/docs/examples/roster/: coach_data.json  player_data.json  roster.json  softball_roster.md
identity-contract/docs/specs/: basetypes.json  credential.json
identity-contract/etc/: identity.toml
identity-contract/pdo/identity/plugins/: __init__.py  committee.py  credential.py  identity.py  policy_agent.py  signature_authority.py
identity-contract/pdo/identity/scripts/: scripts.py
identity-contract/scripts/: init.psh
identity-contract/src/common/: Committee.cpp  Resolution.cpp  ResolutionManager.cpp
identity-contract/src/contracts/: committee.cpp  policy_agent.cpp
identity-contract/src/identity/: committee.h  policy_agent.h
identity-contract/src/identity/common/: Committee.h  Resolution.h  ResolutionManager.h
identity-contract/src/methods/: committee.cpp  policy_agent.cpp
identity-contract/test/: credential1.json  credential2.json  functional_test.psh  run_tests.sh  script_test.sh
identity-contract/test/tests/: committee.psh
